[gd_scene load_steps=5 format=3 uid="uid://bh5pe42vd1td7"]

[ext_resource type="Script" uid="uid://do2v1rmcpbfwv" path="res://scenes/player_scores/player_scores.gd" id="1_07gyn"]
[ext_resource type="Texture2D" uid="uid://cn8tigo73ejtp" path="res://assets/ui/portrait.png" id="1_vpiob"]
[ext_resource type="Texture2D" uid="uid://b2xdoqnffm188" path="res://assets/ui/portrait_clip_mask.png" id="2_07gyn"]
[ext_resource type="Texture2D" uid="uid://b3n2g64yefido" path="res://scenes/entities/player/test.png" id="3_774iw"]

[node name="PlayerScores" type="CanvasLayer"]
script = ExtResource("1_07gyn")

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -32.0
offset_right = 204.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(204, 32)
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.2784314, 0.19607843, 0.29411766, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 64
text = "PLAYER 0 WON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -32.0
offset_right = 134.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24
alignment = 1

[node name="Player1HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Player1HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_vpiob")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Player1HBoxContainer/TextureRect"]
unique_name_in_owner = true
clip_children = 1
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
texture = ExtResource("2_07gyn")

[node name="WinnerHeadSprite" type="Sprite2D" parent="HBoxContainer/Player1HBoxContainer/TextureRect/TextureRect2"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(30, 19)
scale = Vector2(5, 5)
texture = ExtResource("3_774iw")
hframes = 4
vframes = 4

[node name="Player1PointLabel" type="Label" parent="HBoxContainer/Player1HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2784314, 0.19607843, 0.29411766, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 32
text = "10
PTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Player2HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_vpiob")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Player2HBoxContainer/TextureRect2"]
clip_children = 1
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
texture = ExtResource("2_07gyn")

[node name="WinnerHeadSprite" type="Sprite2D" parent="HBoxContainer/Player2HBoxContainer/TextureRect2/TextureRect2"]
texture_filter = 1
position = Vector2(30, 19)
scale = Vector2(5, 5)
texture = ExtResource("3_774iw")
hframes = 4
vframes = 4
frame = 4

[node name="Player2PointLabel" type="Label" parent="HBoxContainer/Player2HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2784314, 0.19607843, 0.29411766, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 32
text = "10
PTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player3HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/Player3HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_vpiob")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Player3HBoxContainer/TextureRect3"]
clip_children = 1
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
texture = ExtResource("2_07gyn")

[node name="WinnerHeadSprite" type="Sprite2D" parent="HBoxContainer/Player3HBoxContainer/TextureRect3/TextureRect2"]
texture_filter = 1
position = Vector2(30, 19)
scale = Vector2(5, 5)
texture = ExtResource("3_774iw")
hframes = 4
vframes = 4
frame = 8

[node name="Player3PointLabel" type="Label" parent="HBoxContainer/Player3HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2784314, 0.19607843, 0.29411766, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 32
text = "10
PTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player4HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/Player4HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_vpiob")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Player4HBoxContainer/TextureRect4"]
clip_children = 1
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
texture = ExtResource("2_07gyn")

[node name="WinnerHeadSprite" type="Sprite2D" parent="HBoxContainer/Player4HBoxContainer/TextureRect4/TextureRect2"]
texture_filter = 1
position = Vector2(30, 19)
scale = Vector2(5, 5)
texture = ExtResource("3_774iw")
hframes = 4
vframes = 4
frame = 12

[node name="Player4PointLabel" type="Label" parent="HBoxContainer/Player4HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.2784314, 0.19607843, 0.29411766, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 32
text = "10
PTS"
horizontal_alignment = 1
vertical_alignment = 1
